--- a/Logging/Ixion.Logging.csproj
+++ b/Logging/Ixion.Logging.csproj
@@ -4,11 +4,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.50727</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{15D4862D-2A28-4953-8919-B6F060046E0E}</ProjectGuid>
+    <ProjectGuid>{5629C126-EB8F-4C5C-8412-63C3CD605486}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Vanila.Utils</RootNamespace>
-    <AssemblyName>Vanila.Utils</AssemblyName>
+    <RootNamespace>Ixion.Logging</RootNamespace>
+    <AssemblyName>Ixion.Logging</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -18,15 +18,16 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>..\lib\Debug\Vanila.Utils.xml</DocumentationFile>
+    <DocumentationFile>..\lib\Debug\Vanila.Logging.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>..\lib\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>..\lib\Release\Vanila.Logging.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -34,13 +35,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Formats\Csv\AbstractFieldFilter.cs" />
-    <Compile Include="Formats\Csv\CsvWriter.cs" />
-    <Compile Include="Formats\Csv\IFieldFilter.cs" />
+    <Compile Include="IAppender.cs" />
+    <Compile Include="AppenderSkeleton.cs" />
+    <Compile Include="Category.cs" />
+    <Compile Include="Layout.cs" />
+    <Compile Include="Level.cs" />
+    <Compile Include="Priority.cs" />
+    <Compile Include="Spi\IAppenderAttachable.cs" />
+    <Compile Include="Spi\IConfigurator.cs" />
+    <Compile Include="Spi\ErrorCode.cs" />
+    <Compile Include="Spi\IErrorHandler.cs" />
+    <Compile Include="Spi\Filter.cs" />
+    <Compile Include="Spi\LocationInfo.cs" />
+    <Compile Include="Logger.cs" />
+    <Compile Include="Spi\ILoggerFactory.cs" />
+    <Compile Include="Spi\ILoggerRepository.cs" />
+    <Compile Include="Spi\LoggingEvent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Formats\Csv\SimpleFieldFilter.cs" />
-    <Compile Include="Relation\Common\DatabaseProvider.cs" />
-    <Compile Include="Relation\Sql\SqlServerProvider.cs" />
+    <Compile Include="Spi\IOptionHandler.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
