* とりあえずログを書けそうな感じ。
+ ILogger インターフェイスを追加しました。
+ ILoggerAdapter インターフェイスを追加しました。

--- a/Logging/Ixion.Logging.csproj
+++ b/Logging/Ixion.Logging.csproj
@@ -38,6 +38,8 @@
     <Compile Include="IAppender.cs" />
     <Compile Include="AppenderSkeleton.cs" />
     <Compile Include="Category.cs" />
+    <Compile Include="ILogger.cs" />
+    <Compile Include="ILoggerAdapter.cs" />
     <Compile Include="Layout.cs" />
     <Compile Include="Level.cs" />
     <Compile Include="Priority.cs" />
