* AppenderEnumerator クラスを削除しました。
+ FormattingInfo を追加しました。
+ PatternConvertor を追加しました。
+ PatternParser 追加しました。

--- a/Logging/Ixion.Logging.csproj
+++ b/Logging/Ixion.Logging.csproj
@@ -36,6 +36,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConsoleAppender.cs" />
+    <Compile Include="Helper\FormattingInfo.cs" />
+    <Compile Include="Helper\PatternConvertor.cs" />
+    <Compile Include="Helper\PatternParser.cs" />
     <Compile Include="IAppender.cs" />
     <Compile Include="AppenderSkeleton.cs" />
     <Compile Include="ILayout.cs" />
