--- a/Logging/Ixion.Logging.csproj
+++ b/Logging/Ixion.Logging.csproj
@@ -39,6 +39,7 @@
     <Compile Include="Helper\FormattingInfo.cs" />
     <Compile Include="Helper\PatternConvertor.cs" />
     <Compile Include="Helper\PatternParser.cs" />
+    <Compile Include="Helper\QuietWriter.cs" />
     <Compile Include="IAppender.cs" />
     <Compile Include="AppenderSkeleton.cs" />
     <Compile Include="ILayout.cs" />
@@ -49,6 +50,7 @@
     <Compile Include="PatternLayout.cs" />
     <Compile Include="Priority.cs" />
     <Compile Include="RootLogger.cs" />
+    <Compile Include="SimpleLayout.cs" />
     <Compile Include="Spi\IAppenderAttachable.cs" />
     <Compile Include="Spi\IConfigurator.cs" />
     <Compile Include="Spi\ErrorCode.cs" />
