--- a/Utils/Ixion.Utils.csproj
+++ b/Utils/Ixion.Utils.csproj
@@ -23,7 +23,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>..\lib\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -35,11 +35,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Formats\Csv\AbstractFieldFilter.cs" />
+    <Compile Include="Formats\AbstractFieldFilter.cs" />
     <Compile Include="Formats\Csv\CsvWriter.cs" />
-    <Compile Include="Formats\Csv\IFieldFilter.cs" />
+    <Compile Include="Formats\IFieldFilter.cs" />
+    <Compile Include="Formats\NilFieldFilter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Formats\Csv\SimpleFieldFilter.cs" />
+    <Compile Include="Formats\SimpleFieldFilter.cs" />
     <Compile Include="Relation\Common\DatabaseProvider.cs" />
     <Compile Include="Relation\Sql\SqlServerProvider.cs" />
   </ItemGroup>
