* s/Std\.IO/Std.Io/g
+ OutputStream クラスを追加しました。
+ InputStream クラスを追加しました。
+ Closeable インターフェースを追加しました。
+ Flushable インターフェースを追加しました。

--- a/Utils/Ixion.Utils.csproj
+++ b/Utils/Ixion.Utils.csproj
@@ -46,6 +46,10 @@
     <Compile Include="Formats\SimpleFieldFilter.cs" />
     <Compile Include="Relation\Common\DatabaseProvider.cs" />
     <Compile Include="Relation\Sql\SqlServerProvider.cs" />
+    <Compile Include="Std\Io\Closeable.cs" />
+    <Compile Include="Std\Io\Flushable.cs" />
+    <Compile Include="Std\Io\InputStream.cs" />
+    <Compile Include="Std\Io\OutputStream.cs" />
     <Compile Include="Std\Io\PrintFormatConvertor.cs" />
     <Compile Include="Std\Io\PrintFormatParser.cs" />
     <Compile Include="Std\Io\PrintFormatSpecify.cs" />
